--- a/css/main.css
+++ b/css/main.css
@@ -98,6 +98,7 @@ a:hover{
 .section-container{
     margin: auto ;
     color: #fff;
+    text-shadow: 0px 0px 2px #606060;
     text-align: center;
     margin-top: 150px;
 }
@@ -140,8 +141,8 @@ a:hover{
 }
 
 .inner-section{
-   background-color: #fff;
-   padding: 40px 0; 
+    background-color: #fff;
+    padding: 40px 0; 
 }
 
 .inner-section-container{
