--- a/css/main.css
+++ b/css/main.css
@@ -87,7 +87,7 @@ a{
 }
 
 a:visited{
-    color: e3e3e3;
+    color: #e3e3e3;
 }
 
 
@@ -98,7 +98,7 @@ a:hover{
 .section-container{
     margin: auto ;
     color: #fff;
-    text-shadow: 0px 0px 2px #606060;
+    text-shadow: 1px 1px 2px #606060;
     text-align: center;
     margin-top: 150px;
 }
