--- a/css/main.css
+++ b/css/main.css
@@ -3,13 +3,14 @@
     background-repeat: no-repeat;
     margin: 200 auto ;
     width: 100%;
-    height: 532px;
+    height: 80vh;
 }
 
 body{
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
     padding: 0;
+    overflow-x: hidden;
     
 }
 
